# A_Compiler

./: CMakeLists.txt  GenTestFile.py  README.md  available_tokens.txt  notes.txt
AC/: AC.h  main.c
AC/src/: Core.c  Core.h  Parser.c  Parser.h  Scanner.c  Scanner.h  SymbolTable.c  SymbolTable.h
docs/: sources.txt
include/: AC.h  Common.h  Core.h  Parser.h  Scanner.h  SymbolTable.h
other/: available_tokens.txt  grammar.txt  test_input.al  test_input.apl
src/: .Scanner.c.swp  Core.c  Scanner.c  SymbolTable.c  main.c
